[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/enemy_nest.png" type="Texture" id=1]
[ext_resource path="res://EnemySpawner.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 58.0

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.843137, 0.54902, 0.54902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=5]
ProgressBar/colors/font_color = Color( 0.94, 0.94, 0.94, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 3 )
ProgressBar/styles/fg = SubResource( 4 )

[node name="EnemySpawner" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Enemies" type="Node2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_top = 64.0
margin_right = 100.0
margin_bottom = 79.0
rect_min_size = Vector2( 100, 15 )
theme = SubResource( 5 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
